# Autonomous-Vehicule

./: .gitignore  car.py  kalman_filter.py  matrix.py
C++/: CMakeLists.txt
C++/DeadCode/: CMakeLists.txt  main.cpp  matrix_addition.cpp  matrix_addition.h  matrix_addition_improved.cpp  matrix_addition_improved.h
C++/Example/: CMakeLists.txt  Example.cpp  Example.h
C++/ForLoop/: CMakeLists.txt  initialize_matrix.cpp  initialize_matrix.hpp  initialize_matrix_improved.cpp  initialize_matrix_improved.hpp  main.cpp  print.cpp
C++/Gaussian/: CMakeLists.txt  gaussian.cpp  gaussian.h  main.cpp
C++/HistogramFilter/: CMakeLists.txt  debugging_helpers.cpp  debugging_helpers.h  helpers.cpp  helpers.h  localizer.cpp  localizer.h  simulate.cpp  simulate.h  tests.cpp  tests.h
C++/HistogramFilterOptimization/: CMakeLists.txt  blur.cpp  initialize_beliefs.cpp  main.cpp  move.cpp  normalize.cpp  print.cpp  sense.cpp  zeros.cpp
C++/HistogramFilterOptimization/headers/: blur.h  move.h  normalize.h  print.h  sense.h  zeros.h
C++/IfStatements/: CMakeLists.txt  main.cpp
C++/IntermediateVariables/: CMakeLists.txt  main.cpp  print.cpp  print.hpp  scalar_multiply.cpp  scalar_multiply.hpp  scalar_multiply_improved.cpp  scalar_multiply_improved.hpp
C++/Matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
C++/MultiDVector/: CMakeLists.txt  main.cpp
C++/OneDimensionalRobot/: CMakeLists.txt  main.cpp
C++/ReadingTextFiles/: CMakeLists.txt  main.cpp
C++/References/: CMakeLists.txt  main.cpp  matrix_addition.cpp  matrix_addition.hpp  matrix_addition_improved.cpp  matrix_addition_improved.hpp
C++/Static/: CMakeLists.txt  blur_factor.cpp  blur_factor.hpp  blur_factor_improved.cpp  blur_factor_improved.hpp  main.cpp  print.cpp  print.hpp
C++/VectorAndLoops/: CMakeLists.txt  main.cpp
C++/VectorStorage/: CMakeLists.txt  initializer.cpp  initializer.hpp  main.cpp  print.cpp  print.hpp  reserved.cpp  reserved.hpp  unreserved.cpp  unreserved.hpp
Python/: car.py
Python/histogram_filter/: helpers.py  localizer.py  simulate.py  writeup.py
Python/route_planner/: helpers.py  planner.py  project_notebook.py  test.py
Python/traffic_light_classifier/: Traffic_Light_Classifier.ipynb  helpers.py  image_classifier.py  test_functions.py
