# CMakeList.txt : CMake project for Example, include source and define
# project specific logic here.
#
cmake_minimum_required(VERSION 3.8)

# Add source to this project's executable.
add_executable(ForLoop "main.cpp" "print.cpp" "initialize_matrix.cpp" "initialize_matrix_improved.cpp")

# TODO: Add tests and install targets if needed.
