# CMakeList.txt : CMake project for Example, include source and define
# project specific logic here.
#
cmake_minimum_required(VERSION 3.8)

# Add source to this project's executable.
add_executable(Static "main.cpp" "blur_factor.cpp" "blur_factor_improved.cpp" "print.cpp")

# TODO: Add tests and install targets if needed.
