# CMakeList.txt : CMake project for Example, include source and define
# project specific logic here.
#
cmake_minimum_required(VERSION 3.8)

# Add source to this project's executable.
add_executable(VectorStorage "main.cpp" "initializer.cpp" "print.cpp" "reserved.cpp" "unreserved.cpp")

# TODO: Add tests and install targets if needed.
